# GoIT

Python_WEB/Lesson_1/HW/: HW_WEB_1.py  README.md
Python_WEB/Lesson_2/: log4.py  my_logger.py  test_logging.py
Python_WEB/Lesson_3/: Dockerfile  addressbook.pkl  create_docker.py  main.py  pyproject.toml  requirements.txt
