[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["vitalinka22 <vitalinka.alipova2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
